# resview

./: .gitignore  LICENSE  README.md  project_gen.py  pyproject.toml
src/resview/: __init__.py  gui.py
src/rsm3d/: data_io.py  data_viz.py  rsm3d.py  spec_parser.py  utilis.py
tests/: test_import.py
