[build-system]
requires = ["hatchling>=1.24", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "resview"
dynamic = ["version"]
description = "ResView — Reciprocal Space Builder and Viewer"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [{ name = "Xiaogang Yang", email = "yangxg@bnl.gov" }]
requires-python = ">=3.11,<3.14"
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.23",
  "pandas>=2.3.0",
  "dask==2025.9.1",
  "pyarrow>=21.0.0",
  "hdf5plugin>=6.0.0",
  "pyyaml>=6",
  "qtpy>=2.4",
  "pyside6>=6.7",  # required Qt binding
  "magicgui>=0.9",
  "napari==0.6.6",
  "vtk>=9.0",
  "xrayutilities==1.7.10",

]

[project.optional-dependencies]
pyside6 = ["pyside6>=6.5"]
pyqt6   = ["pyqt6>=6.5"]

[project.urls]
Homepage = "https://github.com/your-org/resview"
Issues   = "https://github.com/your-org/resview/issues"

[project.scripts]
resview = "resview.gui:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["src/resview", "src/rsm3d"]

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I", "B"]
lint.ignore = ["E501"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
resview = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
pyqt6 = { features = ["pyqt6"], solve-group = "default" }
pyside6 = { features = ["pyside6"], solve-group = "default" }

[tool.pixi.tasks]
